solve right side white space problem

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -218,8 +218,8 @@ margin-bottom:10px;
     height: 5vw;
     font-size: 1.5em;
     margin-top: 0vh;
-    margin-left: -24px;
-    margin-right: -24px;
+    margin-left: -1vw;
+    margin-right: -1vw;
 }
 
 /* 
@@ -408,4 +408,13 @@ section.space--xxs, footer.space--xxs {
     color:rgba(89, 128, 132, 0.65);
     
 }
-  
+body{
+    color:rgba(89, 128, 132, 0.65);
+    
+}
+
+.border{
+   /* border: 1px solid;
+    border-color: red;
+    */
+}
